# fart-checker

./: .gitignore  README.md  aserial.py  checksum.py  detect_device.py  fartchecker-reconfigure.py  main.py  requirements.txt  sensor_read.py  test_calc_checksum.py  test_checksum.py  test_receiver.py  uart.py
aserial/: __init__.py  __main__.py  aserial.py
cpp/: CMakeLists.txt  conanfile.txt  default.nix  main.cpp  test_boost_msm.cpp
cpp/include/: checksum.h  packet_receiver.h  sender.h  serial.h  timer.h  watchdog.h
cpp/include/fsm/: main.h  packet_receiver.h  run_worker_event.h
cpp/src/: checksum.cpp
cpp/test/: CMakeLists.txt  boost_msm_choise.cpp  boost_msm_defer_event.cpp  boost_msm_forward_data.cpp  boost_msm_simple.cpp  boost_msm_submachine.cpp  checksum.cpp  packet_receiver.cpp
cpp/test/boost/: msm_defer_event.cpp  msm_forward_data.cpp  msm_simple.cpp
cpp/test/fsm/: main.cpp  packet_receiver.cpp
gas_sensor/: __init__.py  calc_checksum.py  config.py  gas.py  read_packet.py  read_sensor.py  sensor.py
reconfigure/: __init__.py  exit_dialog.py  page_influx.py  page_sensors.py  tui.py
tests/: .gitignore  test_asyncio.py  test_calc_checksum.py  test_config.py  test_config_influx.py  test_read_packet.py  test_sensor_read.py  test_transitions.py  test_yaml.py
